renamed layout/ to layouts/
--HG--
extra : convert_revision : svn%3A177060d3-6165-4ab0-95eb-642399a075a8/trunk%4026

--- a/README
+++ b/README
@@ -8,12 +8,11 @@ Markdown, etc.
 == Documentation
 
 nanoc has a web site at <http://stoneship.org/software/nanoc/>, which contains
-documentation to get you started.
+a "Getting Started" guide as well as a reference for nanoc.
 
 == Contact
 
-You can reach me at <denis.defreyne@stoneship.org>. Feel free to send any
-feedback. Thanks!
+You can reach me at <denis.defreyne@stoneship.org>.
 
 == Copyright
 
