renamed create_directory to create_dir for consistency's sake; added file management tests; updated TODO

--- a/TODO
+++ b/TODO
@@ -1,3 +1,6 @@
 * Nested layouts
 * Chained dependencies
 * Custom Rake tasks
+* Improve error handling
+	* Check for a valid site
+* Merge file_management in enhancements
