--- a/TODO
+++ b/TODO
@@ -2,5 +2,5 @@
   * attributes accessed like "@page.title", "@page.tags", ...
 * Add support for custom filters
   * HTML validator filter, for example
-* Subversion integration
-  * Automatically perform svn add, svn mv
+* Make nanoc more robust
+  * Currently compiling file should be mentioned when an exception occurs
