removed a stray debug message; bumped version to 1.6.1
--HG--
extra : convert_revision : svn%3A177060d3-6165-4ab0-95eb-642399a075a8/nanoc/trunk%40402

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,12 +1,17 @@
 nanoc Release Notes
 ===================
 
+1.6.1
+-----
+
+* Removed a stray debug message
+
 1.6
 ---
 
 * Added support for post-layout filters
 * Added support for getting a File object for the page, so you can now e.g.
-  easily get the modification time for a given page (`@page.file.mtime`).
+  easily get the modification time for a given page (`@page.file.mtime`)
 * Cleaned up the source code a lot
 * Removed deprecated asset-copying functionality
 
