--- a/ChangeLog
+++ b/ChangeLog
@@ -6,12 +6,15 @@ nanoc Release Notes
 
 * The 'eruby' filter has been split in two filters, 'erb' and 'erubis', which
   no longer use the config file. The 'eruby' filter has been deprecated, and
-  will be removed in 1.8.
+  will be removed in 1.8
 * Progress indicators are now displayed while the site is compiling.
 * Nested hashes in meta files can now be accessed using 'dot notation', e.g.
   `@page.foo.bar.baz`. Previously this would have to be
   `@page.foo[:bar][:baz]` instead.
-* Added `builtin` namespace.
+* Added `builtin` namespace
+* Removed support for Liquid -- it seems to be barely used, probably because
+  it is not easy to use and aimed mostly to be a secure templating language,
+  which nanoc does not need
 
 1.6.2
 -----
