added support for custom layout processors
--HG--
extra : convert_revision : svn%3A177060d3-6165-4ab0-95eb-642399a075a8/nanoc/trunk%40472

--- a/ChangeLog
+++ b/ChangeLog
@@ -11,6 +11,7 @@ nanoc Release Notes
 * Removed support for Liquid -- it seems to be barely used, probably because
   it is not easy to use and aimed mostly to be a secure templating language,
   which nanoc does not need
+* Added support for custom layout processors
 
 1.6.2
 -----
