removed support for 'filters' -- use 'filters_pre' instead
--HG--
extra : convert_revision : svn%3A177060d3-6165-4ab0-95eb-642399a075a8/nanoc/trunk%40522

--- a/ChangeLog
+++ b/ChangeLog
@@ -18,6 +18,7 @@ Changed:
 
 Removed:
 
+* The `filters` property; use `filters_pre` instead
 * All filters and layout processors except for 'erb' -- the missing ones are
   now available as plugins available on the nanoc web site
 * Support for Liquid
