added entry about new filter syntax to changelog
--HG--
extra : convert_revision : svn%3A177060d3-6165-4ab0-95eb-642399a075a8/nanoc/trunk%40551

--- a/ChangeLog
+++ b/ChangeLog
@@ -14,6 +14,7 @@ New:
 Changed:
 
 * The source has been restructured and cleaned up a great deal
+* Filters are defined in a different way now
 * The 'eruby' filter now uses ERB instead of Erubis
 
 Removed:
