added parent/children test case; added parent/children feature to changelog
--HG--
extra : convert_revision : svn%3A177060d3-6165-4ab0-95eb-642399a075a8/nanoc/trunk%40572

--- a/ChangeLog
+++ b/ChangeLog
@@ -10,6 +10,7 @@ New:
 * Support for custom data sources
 * Database data source
 * Auto-compiler
+* Pages have `parent` and `children`
 
 Changed:
 
