updating version to 2.1; updating changelog with 2.1 changes; cleanup

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,18 @@
 nanoc Release Notes
 ===================
 
+2.1
+---
+
+New:
+
+* Maruku filter
+
+Removed:
+
+* The `markdown` and `textile` filters no longer exist; instead, use
+  `bluecloth` (for Markdown) and `redcloth` (for Markdown and Textile).
+
 2.0
 ---
 
