added list of contributors
--HG--
extra : convert_revision : svn%3A177060d3-6165-4ab0-95eb-642399a075a8/nanoc/trunk%40697

--- a/README
+++ b/README
@@ -10,6 +10,17 @@ Markdown, etc.
 nanoc has a web site at <http://nanoc.stoneship.org/>, which contains a
 "Getting Started" guide as well as a reference for nanoc.
 
+== Contributors
+
+(In alphabetical order)
+
+* Colin Barrett
+* Dmitry Bilunov
+* "Soryu"
+* Dennis Sutch
+
+Special thanks to Ale Muñoz.
+
 == Contact
 
 You can reach me at <denis.defreyne@stoneship.org>.
