porting 'too many open files' fix to nanoc 2.0.1; updating changelog and version
--HG--
branch : 2.0
extra : convert_revision : svn%3A177060d3-6165-4ab0-95eb-642399a075a8/nanoc/branches/2.0%40709

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,11 @@
 nanoc Release Notes
 ===================
 
+2.0.1
+-----
+
+* Fixed a "too many open files" error that could appear during (auto)compiling
+
 2.0
 ---
 
