adding erubis filter
--HG--
extra : convert_revision : svn%3A177060d3-6165-4ab0-95eb-642399a075a8/nanoc/trunk%40717

--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,7 @@ nanoc Release Notes
 New:
 
 * Maruku filter
+* Erubis filter
 * The Haml filter now provides @page, @pages and @config variables
 
 Removed:
