--- a/ChangeLog
+++ b/ChangeLog
@@ -20,6 +20,11 @@ Removed:
   `erb` (for embedded Ruby), `bluecloth` (for Markdown) and `redcloth` (for
   Markdown and Textile).
 
+2.0.2
+-----
+
+* nanoc now requires Ruby 1.8.5 instead of 1.8.6
+
 2.0.1
 -----
 
