--- a/ChangeLog
+++ b/ChangeLog
@@ -16,14 +16,18 @@ New:
 Changed:
 
 * Updated Haml filter so it uses Haml 1.8.0 now (older versions will not work)
+* Layout processors and filters have been merged, so you don't have to write
+  the same code twice
 * Layouts no longer rely on file extensions to determine the layout processor
-  used, and layouts are now stored in directories instead of simple files.
+  used, and layouts are now stored in directories instead of simple files
 
 Removed:
 
 * The `eruby`, `markdown`, `textile` filters no longer exist; instead, use
   `erb` (for embedded Ruby), `bluecloth` (for Markdown) and `redcloth` (for
   Markdown and Textile)
+* The database and trivial data sources are no longer included in the standard
+  nanoc distribution, but you can get them from the plugins repository now.
 
 2.0.2
 -----
