autocompiler now serves pages with the most appropriate MIME type instead of always using 'text/html', fixing a bug which could cause CSS files to be served using the wrong MIME type, breaking Firefox

--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,8 @@ nanoc Release Notes
 -----
 
 * autocompiler now honors custom paths
+* autocompiler now attempts to serve pages with the most appropriate MIME
+  type, instead of always serving everything as "text/html"
 
 2.0.2
 -----
