--- a/ChangeLog
+++ b/ChangeLog
@@ -13,7 +13,9 @@ New:
 * Better source code documentation
 * A new filesystem data source named "filesystem2", which stores pages and
   layouts in single files instead of directories
-* Routers, which decide where compiled pages should be written to.
+* Routers, which decide where compiled pages should be written to
+* A 'switch' command that allows sites to be switched between data sources
+* An 'update' command that upgrades the site's data to a new format
 
 Changed:
 
