more documentation improvements (including CLI tool)

--- a/README
+++ b/README
@@ -27,6 +27,8 @@ The source code is structured in a few directories:
 * *lib*
   * *nanoc*
     * *base* contains the bare essentials necessary for nanoc to function
+    * *binary_filters* contains the standard binary filters
+      (Nanoc::BinaryFilter subclasses) such as the thumbnail filter
     * *cli* contains the commandline interface
     * *data_sources* contains the standard data sources (Nanoc::DataSource
       subclasses), such as the filesystem data source
@@ -45,10 +47,11 @@ The namespaces (modules) are organised like this:
 * *Nanoc* is the namespace for everything nanoc-related (obviously). The
   classes in 'lib/nanoc/base' and 'lib/nanoc/extra' are part of this module
   (not Nanoc::Base which does not exist)
+  * *BinaryFilters* contains the binary filters
   * *CLI* containing everything related to the commandline tool.
   * *DataSources* contains the data sources
   * *Extensions* contains the extensions
-  * *Filters* contains the filters
+  * *Filters* contains the (textual) filters
   * *Routers* contains the routers
 
 The central class in nanoc is Nanoc::Site, so you should start there if you
