--- a/README
+++ b/README
@@ -32,10 +32,10 @@ The source code is structured in a few directories:
     * *cli* contains the commandline interface
     * *data_sources* contains the standard data sources (Nanoc::DataSource
       subclasses), such as the filesystem data source
-    * *extensions* contains extensions, which provide functionality some sites
-      may find useful, such as the blogging and tagging extensions
+    * *helpers* contains helpers, which provide functionality some sites
+      may find useful, such as the blogging and tagging helpers
     * *extra* contains stuff that is not needed by nanoc itself, but which may
-      be used by extensions, data sources, filters or routers.
+      be used by helpers, data sources, filters or routers.
     * *filters* contains the standard filters (Nanoc::Filter subclasses) such
       as ERB, Markdown, Haml, ...
     * *routers* contains the standard routers (Nanoc::Router subclasses)
@@ -50,7 +50,7 @@ The namespaces (modules) are organised like this:
   * *BinaryFilters* contains the binary filters
   * *CLI* containing everything related to the commandline tool.
   * *DataSources* contains the data sources
-  * *Extensions* contains the extensions
+  * *Helpers* contains the helpers
   * *Extra* contains useful stuff not needed by nanoc itself
   * *Filters* contains the (textual) filters
   * *Routers* contains the routers
