adding Šime Ramov to credits

--- a/README
+++ b/README
@@ -64,6 +64,7 @@ want to explore nanoc from a technical perspective.
 
 * Colin Barrett
 * Dmitry Bilunov
+* Šime Ramov
 * "Soryu"
 * Dennis Sutch
 
