--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,7 @@ nanoc Release Notes
 * The Haml and Sass filters now correctly take their options from assets
 * Autocompiler now serves index files instead of 404s
 * Layouts named "index" are now handled correctly
+* filesystem_combined now properly handles assets
 
 2.1.2
 -----
