--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,7 @@ nanoc Release Notes
 
 * The compile command now takes --no-assets and --no-pages options
 * Dependencies between pages are now tracked properly
+* Filters can now optionally take arguments
 
 2.1.4
 -----
